--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,9 +9,12 @@
     <script src="js/app.js"></script>
 </head>
 <body>
-    {{>header}}
-    <img src="/img/robot.png" alt="">
+    <div>
+        {{>header}}
+        <p>This site is created by Kyunam. It uses data from mapbox.com and weatherstack.com. </p>
+        <img src="/img/robot.png" alt="">
+    </div>  
     {{>footer}}
-    <h1>From the static file</h1>
+    {{!-- <h1>From the static file</h1> --}}
 </body>
 </html>
